@startuml

class Main {
    + main(args: String[]): void
}

class UsernamePanel {
    - usernameInput: JTestField
    - nextButton: JButton

    + UsernamePanel()
    + saveUsername(): void
}

class SettingsPanel {
    - categoryGroup: ButtonGroup

    + SettingsPanel()
    + getCategory(): String
    + saveSettings(selectedCategory: String, difficulty: int, quantity): void
}

class ResultPanel {
    + ResultPanel(score: int, questions: List<Question>, userAnswers: List<List<Integer>>, questionScores: List<Integer>)
    + getPlayerName(): String
}

class QuizPanel {
    - questions: List<Question>
    - userAnswers: List<List<Integer>>
    - questionScores: List<Integer>
    - currentQuestion: int
    - score: int

    + QuizPanel(category: String, difficulty: int, quantity: int)
    + loadQuestions(category: String, difficulty: int, quantity: int): List<Question>
    + convertDifficulty(difficulty: String): int
    + displayQuestion(diff: int): void
    + pointAnswer(button: JButton, buttonIndices: Map<AbstractButton, Integer>, correctAnswers: List<Integer>, diff: int)
}

class DetailsPanel {
    + DetailsPanel(questions: List<Question>, userAnswers: List<List<Integer>>, questionScores: List<Integer>)
    + formatAnswers(options: List<String>, answers: List<Integer>): String
}

class LeaderboardManager{
    - LEADERBOARD_FILE: Path

    + loadLeaderboard(): List<PlayerScore>
    + saveLeaderboard(leaderboard: List<PlayerScore>): void
    + updateLeaderboard(playerName: String, score: int): List<PlayerScore>
}

class PlayerScore {
    - name: String
    - score: int

    + PlayerScore(name: String, score: int)
    + getName(): String
    + getScore(): int
}

class Question {
    - type: String
    - category: String
    - difficulty: String
    - text: String
    - options: List<String>
    - correctAnswers: List<Integer>

    + Question(type: String, category: String, difficulty: String, text: String, options: List<String>, correctAnswers: List<Integer>)
    + getType(): String       
    + getCategory(): String   
    + getDifficulty(): String 
    + getText(): String       
    + getOptions(): List<String> 
    + getCorrectAnswers(): List<Integer>
}

MainApp --> UsernamePanel
QuizPanel --> Question
SettingsPanel --> QuizPanel
ResultPanel --> QuizPanel
LeaderboardManager --> PlayerScore

@enduml
